--- a/src/app/features/components/habitats/habitats.component.html
+++ b/src/app/features/components/habitats/habitats.component.html
@@ -1,1 +1,68 @@
-<p>habitats works!</p>
+<app-continents></app-continents>
+<div class="main">
+    <h1>Découvrez les habitats des animaux du Zoo</h1>
+    <div class="container">
+        <div 
+            *ngFor="let habitat of habitats"
+            class="tableauHabitats"
+        >
+            <div 
+                *ngIf="habitat.continent_id === selectedContinentId" 
+                class="cardHabitat"
+            >
+                <h1>{{ habitat.nom }}</h1>
+                <a class="image-text">
+                    <div class="image-container">
+                        <img 
+                            [src]="habitat.imageUrl" 
+                            [alt]="habitat.nom"
+                            [title]="'Dernier commentaire: ' + habitat.commentaire_habitat">
+                    </div>
+
+                </a>
+                <div class="detailsCards">                    
+                    <div class="detailsCardsLeft">
+                        <h2>Description : </h2>
+                        <p>
+                            {{ habitat.description }}
+                        </p>
+                    </div>  
+                    <div class="detailsCardsRight">
+                        <h2>Les animaux concernés :</h2>
+                        <!-- <p> -->
+                            <ul>
+                                <li>3 Tigre du Bengale</li>
+                                <li>2 Éléphant d'Asie</li>
+                                <li>2 Rhinocéros indien</li>
+                                <li>3 Langur</li>
+                            </ul>
+                    </div>  
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+  
+<!-- Permet d'ajouter un petit formulairee pour ajouter les cartes des habitats -->    
+    <!-- <form (ngSubmit)="onSubmit()">
+        <label for="nom">Nom:</label>
+        <input type="text" id="nom" [(ngModel)]="habitat.nom" name="nom" required>
+
+        <label for="description">Description:</label>
+        <input type="text" id="description" [(ngModel)]="habitat.description" name="description" required>
+
+        <label for="commentaire">Commentaire:</label>
+        <textarea id="commentaire" [(ngModel)]="habitat.commentaire_habitat" name="commentaire"></textarea>
+
+        <label for="continent">Continent:</label>
+        <select id="continent" [(ngModel)]="habitat.continent_id" name="continent_id" required>
+            <option *ngFor="let continent of continents" [value]="continent.continent_id">{{ continent.nom }}</option>
+        </select>
+
+        <label for="image">Sélectionner une image:</label>
+        <input type="file" (change)="onFileSelected($event)" name="image" id="image" accept="image/*" required>
+        <br>
+
+        <button type="submit">Ajouter Habitat</button>
+    </form> -->
