--- a/src/app/shared/continents/continents.component.html
+++ b/src/app/shared/continents/continents.component.html
@@ -1,25 +1,30 @@
 <div class="main">
     <h1>Découvrez les habitats des animaux du Zoo</h1>
     <div class="container">
-        <div 
-            class="continent" 
-            *ngFor="let continent of continents"
-        >
-        <a 
-            class="image-text" 
-            [href]="continent.link"
-        >
-            <div class="image-container">
-                <img 
-                    [src]="continent.imageUrl" 
-                    [alt]="continent.text"
-                >
-            </div>
-            <span class="">
-                {{ continent.text }}
-            </span>
-        </a>
+        <div class="continent" *ngFor="let continent of continents">
+            <a class="image-text" (click)="onSelectContinent(continent.continent_id)">
+                <div class="image-container">
+                    <img 
+                        [src]="continent.imageUrl" 
+                        [alt]="continent.nom"
+                        [title]="'Voir les habitats de l\'' + continent.nom"
+                    >
+                </div>
+                <span>{{ continent.nom }}</span>
+            </a>
         </div>
     </div>
 </div>
-  
+
+
+<!-- Permet d'ajouter un petit formulairee pour ajouter les cartes des continents-->
+<!-- <form (ngSubmit)="onSubmit()">
+    <label for="nom">Nom du continent:</label>
+    <input type="text" [(ngModel)]="continent.nom" name="nom" id="nom" required>
+    <br>
+    <label for="image">Sélectionner une image:</label>
+    <input type="file" (change)="onFileSelected($event)" name="image" id="image" accept="image/*" required>
+    <br>
+    <button type="submit">Upload Image</button>
+</form> -->
+
