--- a/src/app/shared/continents/continents.component.scss
+++ b/src/app/shared/continents/continents.component.scss
@@ -46,7 +46,8 @@ img {
     width: auto;
     height: auto;
     display: block;
-    border-radius: 50%;
+    border-radius: 50%;    
+    cursor: pointer;
 }
 
 .image-text {
